--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
     "nodemailer": "^6.3.1",
+    "request": "^2.88.0",
     "svg-captcha": "^1.4.0",
     "util": "^0.12.1",
-    "uuid": "^3.3.3"
+    "uuid": "^3.3.3",
+    "xml-js": "^1.6.11"
   },
   "devDependencies": {
     "@babel/core": "^7.5.4",
